ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ModuleDeclarations/parserModuleDeclaration3/input.ts.stderr
error: `declare` modifier not allowed for code already in an ambient context
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ModuleDeclarations/parserModuleDeclaration3/input.ts:2:3
  |
2 |   declare module M2 {
  |   ^^^^^^^

